# udaconnect

./: README.md
deployment/: kafka-values.yaml  location-ingester-job.yaml  location-ingester.yaml  location-processor.yaml
docs/: architecture_decisions.txt  grpc.txt  openapi.yaml  postman_collection.json
modules/ms-location-ingester/: .dockerignore  Dockerfile  configs.py  geolocation.proto  geolocation_client.py  geolocation_pb2.py  geolocation_pb2_grpc.py  geolocation_server.py  pyproject.toml
modules/ms-location-processor/: .dockerignore  Dockerfile  config.py  main.py  models.py  pyproject.toml
modules/ms-rest-api/app/udaconnect/: services.py
